{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 32,
  "lineage": "9ddd6e3e-5341-d62c-01fd-f7a2bcf93ba3",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05134c8ef96964280",
            "arn": "arn:aws:ec2:us-west-2:021891610828:instance/i-057ecea4e5317217d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-EC2_instance_profile",
            "id": "i-057ecea4e5317217d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-chirag-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-086330af1894456ee",
            "private_dns": "ip-10-0-1-89.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.89",
            "public_ip": "54.185.18.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-090f0de87eaf74345",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e141baecb03b41f1",
            "tags": {
              "Name": "dev-Webserver-chirag"
            },
            "tags_all": {
              "Name": "dev-Webserver-chirag"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bd2e4d6bfa30c864"
            ]
          },
          "dependencies": [
            "module.s3.aws_iam_instance_profile.ec2_instance_profile",
            "module.vpc.aws_security_group.ec2_sg_ssh",
            "module.vpc.aws_subnet.Project_public_subnet",
            "module.vpc.aws_vpc.ProjectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:021891610828:internet-gateway/igw-02b3a42509a81e368",
            "id": "igw-02b3a42509a81e368",
            "owner_id": "021891610828",
            "tags": {
              "Name": "dev-chirag"
            },
            "tags_all": {
              "Name": "dev-chirag"
            },
            "vpc_id": "vpc-0952db43e36d6afdb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ProjectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Project_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:021891610828:route-table/rtb-06ec288aa0c45ae5a",
            "id": "rtb-06ec288aa0c45ae5a",
            "owner_id": "021891610828",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b3a42509a81e368",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0952db43e36d6afdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.Project_igw",
            "module.vpc.aws_vpc.ProjectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Project_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d58f1970098fcd8",
            "route_table_id": "rtb-06ec288aa0c45ae5a",
            "subnet_id": "subnet-0e141baecb03b41f1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.Project_igw",
            "module.vpc.aws_route_table.Project_public_rt",
            "module.vpc.aws_subnet.Project_public_subnet",
            "module.vpc.aws_vpc.ProjectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:021891610828:security-group/sg-0bd2e4d6bfa30c864",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd2e4d6bfa30c864",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240823095530165700000001",
            "name_prefix": "terraform-",
            "owner_id": "021891610828",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-sg-chirag"
            },
            "tags_all": {
              "Name": "dev-sg-chirag"
            },
            "timeouts": null,
            "vpc_id": "vpc-0952db43e36d6afdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.ProjectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Project_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:021891610828:subnet/subnet-0e141baecb03b41f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e141baecb03b41f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891610828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0952db43e36d6afdb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ProjectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ProjectVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:021891610828:vpc/vpc-0952db43e36d6afdb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06683ae4e0e22c6c8",
            "default_route_table_id": "rtb-0faa4d8205e3aa3e9",
            "default_security_group_id": "sg-0847140e1749a97d2",
            "dhcp_options_id": "dopt-0a0f54c7cec7d2a9a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0952db43e36d6afdb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0faa4d8205e3aa3e9",
            "owner_id": "021891610828",
            "tags": {
              "Name": "dev-chirag"
            },
            "tags_all": {
              "Name": "dev-chirag"
            }
          }
        }
      ]
    }
  ]
}